# forge-triage

./: .gitignore  README.md  demo.tape  flake.nix  pyproject.toml
.pi/prompts/: opsx-explore.md  opsx-onboard.md
openspec/: config.yaml
openspec/changes/archive/2026-02-09-enhanced-pr-detail-view/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-02-09-forge-triage/: design.md
openspec/changes/archive/2026-02-09-show-state-icon-instead-of-priority/: design.md  proposal.md  tasks.md
openspec/changes/forge-triage/: proposal.md  tasks.md
openspec/changes/pr-detail-tab-redesign/: design.md  proposal.md  tasks.md
openspec/specs/github-pr-api/: spec.md
openspec/specs/github-sync/: spec.md
openspec/specs/pr-detail-view/: spec.md
openspec/specs/pr-diff-view/: spec.md
openspec/specs/pr-review-actions/: spec.md
openspec/specs/pr-user-commands/: spec.md
openspec/specs/priority-engine/: spec.md
openspec/specs/subject-state/: spec.md
openspec/specs/tui-triage/: spec.md
src/forge_triage/: __main__.py  backend.py  cli.py  config.py  db.py  github.py  github_pr.py  messages.py  pr_db.py  priority.py  schema.sql  sync.py
src/forge_triage/tui/: app.py  detail_pane.py  detail_screen.py  help_screen.py  notification_list.py
src/forge_triage/tui/widgets/: command_palette.py  (+4 more)
tests/: conftest.py  test_backend.py  test_backend_pr.py  test_cli.py  test_config.py  test_db.py  test_detail_screen.py  test_github.py  test_github_pr.py  test_markdown_light.py  test_pr_command_runner.py  test_pr_db.py  test_priority.py  test_sync.py  test_tui.py
(+15 files in other folders)
